--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body aurelia-app="src/main">
+    <script src="node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
     <script src="systemjs.config.js"></script>
     <script src="dist/vendor-bundle.js"></script>
